[package]
name = "graphql-tools"
version = "0.2.1"
edition = "2021"
description = "Tools for working with GraphQL in Rust, based on graphql-parser Document."
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["graphql", "tools", "gql", "validation", "ast"]
homepage = "https://github.com/dotansimha/graphql-tools-rs"
documentation = "https://github.com/dotansimha/graphql-tools-rs"
authors = ["Dotan Simha <dotansimha@gmail.com>"]

[dependencies]
# Until they release https://github.com/graphql-rust/graphql-parser/commit/0d93ac9310c2894a029d0eb912c3463875a535f9
graphql-parser = { git = "https://github.com/graphql-rust/graphql-parser.git", rev = "8d76425d83c40670570cc325f57c730262f07456" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Until they release https://github.com/graphql-rust/graphql-parser/commit/0d93ac9310c2894a029d0eb912c3463875a535f9
graphql-parser = { git = "https://github.com/graphql-rust/graphql-parser.git", rev = "8d76425d83c40670570cc325f57c730262f07456" }
