[package]
name = "graphql-tools"
version = "0.3.0"
edition = "2021"
description = "Tools for working with GraphQL in Rust, based on graphql-parser Document."
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["graphql", "tools", "gql", "validation", "ast"]
homepage = "https://github.com/dotansimha/graphql-tools-rs"
documentation = "https://github.com/dotansimha/graphql-tools-rs"
authors = ["Dotan Simha <dotansimha@gmail.com>"]

[dependencies]
graphql-parser = { version = "^0.4.0", optional = true }
graphql-parser-hive-fork = { version = "^0.5.0", optional = true }
lazy_static = "1.4.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0.0"

[features]
default = ["graphql_parser"]
graphql_parser_fork = ["dep:graphql-parser-hive-fork"]
graphql_parser = ["dep:graphql-parser"]
